# pynam_html_parser

./: input.yml  main.py  pyproject.toml
templates/: README.md  index.html  style.css
